tests/fail/108-fail-as-binary-option-u8.rs
use df_derive::ToDataFrame;
#[path = "../common.rs"]
mod core;

#[derive(ToDataFrame)]
struct Bad {
    #[df_derive(as_binary)]
    one_byte: Option<u8>,
}

fn main() {}
